--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Delivery Food - доставка еды на дом</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -35,13 +40,34 @@
     <!-- /.container -->
     <main class="main">
         <div class="container">
-            <section class="container-promo">
-                <section class="promo">
-                    <h1 class="promo-title">Онлайн-сервис <br> доставки еды на дом</h1>
-                    <p class="promo-text">Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком</p>
+            <div class="swiper-container">
+                <section class="container-promo swiper-wrapper">
+                    <section class="promo pizza swiper-slide">
+                        <h1 class="promo-title">Онлайн-сервис <br> доставки еды на дом</h1>
+                        <p class="promo-text">Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком</p>
+                    </section>
+                     <section class="promo kebab swiper-slide">
+                        <h1 class="promo-title">Шашлыки на майские <br> со скидкой 35%</h1>
+                        <p class="promo-text">
+                            Закажите шашлыки в любом ресторане до 10 мая и получите скидку по промокоду OMAGAD
+                        </p>
+                    </section>
+                    <section class="promo vegetables swiper-slide">
+                        <h1 class="promo-title">Скидка 20% на всю еду <br> по промокоду LOVE.JS</h1>
+                        <p class="promo-text">
+                            Блюдо из ресторана привезут вместе с двумя подарочными книгами по фронтенду
+                        </p>
+                    </section>
+                    <section class="promo sushi swiper-slide">
+                        <h1 class="promo-title">Сеты со скидкой до 30% <br> в ресторанах</h1>
+                        <p class="promo-text">
+                            Скидки на сеты до 30 мая по промокоду DADADA
+                        </p>
+                    </section> 
+    
                 </section>
 
-            </section>
+            </div>
             
             <section class="restaurant">
                 <div class="section-heading">
@@ -304,7 +330,7 @@
         <!-- /.modal-dialog -->
     </div>
     <script src="js/wow.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" ></script>
     <script src="js/disabledScroll.js"></script>
 </body>
 </html>
